--- a/01_agama/madhyama/MA_001.md
+++ b/01_agama/madhyama/MA_001.md
@@ -2,138 +2,186 @@
 layout: default
 title: 'The Medium Discourses | Chapter 1: The Sevens | 1. Skillful Qualities'
 type: kramdown
-base: ../../
+base: ../../../
 previous: index.html
 next: MA_002.html
 ---
 
-# [The Medium Discourses](index.html)
-## Chapter 1: The Sevens
-### 1. Skillful Qualities
+<h1><a href='index.html'>The Medium Discourses</a></h1>
+<h2>Chapter 1: The Sevens</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（一） 中阿含 七法品 善法經第一</th>
+  <th class='en'>1. Skillful Qualities</th>
+  <tr>
+    <td title='t26.1.421a13'>我聞如是： 一時，佛遊舍衛國，在勝林、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421a14'>爾時，世尊告諸比丘： 「若有比丘成就七法者，便於賢聖得歡喜樂，正趣漏盡。 云何爲七？ 謂比丘知法、知義、知時、知節、知己、知衆、知人勝如。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “If a monk accomplishes seven qualities, then he’ll attain the happiness of the noble ones, and he’ll be rightly headed for the end of the contaminants. What are the seven? A monk knows the teaching, knows the meaning, knows the time, knows moderation, knows himself, knows the community, and knows the superiority of people.</td>
+  </tr>
+<tr>
+  <td title='t26.1.421a17'></td>
+  <td class='subheading'>Knowing the Teaching</td>
+</tr>
+  <tr>
+    <td title='t26.1.421a17'>「云何比丘爲知法耶？ 謂比丘知正經、歌詠、記説、偈咃、因縁、撰録、本起、此説、生處、廣解、未曾有法、及説是義。 是謂比丘爲知法也。</td>
+    <td id='p3'>3. “How does a monk know the teaching? A monk knows the right <em>sūtra</em>s, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning.<sup id="ref2"><a href="#n2">2</a></sup> This is called a monk who knows the teaching.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421a20'>「若有比丘不知法者，謂不知正經、歌詠、記説、偈咃、因縁、撰録、本起、此説、生處、廣解、未曾有法、及説義。 如是比丘爲不知法。</td>
+    <td id='p4'>4. “Suppose a monk doesn’t know the teaching, which is to say that he doesn’t know the right <em>sūtra</em>s, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning. Such a monk doesn’t know the teaching.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421a23'>「若有比丘善知法者，謂知正經、歌詠、記説、偈咃、因縁、撰録、本起、此説、生處、廣解、未曾有法、及説義。 是謂比丘善知法也。</td>
+    <td id='p5'>5. “Suppose a monk knows the teaching well, which is to say that he knows the right <em>sūtra</em>s, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning. This is called a monk who knows the teaching well.</td>
+  </tr>
+<tr>
+  <td title='t26.1.421a25'></td>
+  <td class='subheading'>Knowing the Meaning</td>
+</tr>
+  <tr>
+    <td title='t26.1.421a25'>「云何比丘爲知義耶？ 謂比丘知彼彼説義是彼義、是此義。 是謂比丘爲知義也。</td>
+    <td id='p6'>6. “How does a monk know the meaning? A monk knows that this or that expression has this or that meaning. This is called a monk who knows the meaning.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421a27'>「若有比丘不知義者，謂不知彼彼説義是彼義、是此義。 如是比丘爲不知義。</td>
+    <td id='p7'>7. “Suppose a monk doesn’t know the meaning, which is to say that he doesn’t know that this or that expression has this or that meaning. Such a monk doesn’t know the meaning.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421a29'>「若有比丘善知義者，謂知彼彼説義是彼義、是此義。 是謂比丘善知義也。</td>
+    <td id='p8'>8. “Suppose a monk knows the meaning well, which is to say that he knows that this or that expression has this or that meaning. This is called a monk who knows the meaning well.</td>
+  </tr>
+<tr>
+  <td title='t26.1.421b2'></td>
+  <td class='subheading'>Knowing the Time</td>
+</tr>
+  <tr>
+    <td title='t26.1.421b2'>「云何比丘爲知時耶？ 謂比丘知是時修下相、是時修高相、是時修捨相。 是謂比丘爲知時也。</td>
+    <td id='p9'>9. “How does a monk know the time? A monk knows the time to cultivate a humble appearance, the time to cultivate a dignified appearance, and the time to cultivate an indifferent appearance.<sup id="ref3"><a href="#n3">3</a></sup> This is called a monk who knows the time.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421b4'>「若有比丘不知時者，謂不知是時修下相、是時修高相、是時修捨相。 如是比丘爲不知時。</td>
+    <td id='p10'>10. “Suppose a monk doesn’t know the time, which is to say that he doesn’t know the time to cultivate a humble appearance, the time to cultivate a dignified appearance, and the time to cultivate an indifferent appearance. Such a monk doesn’t know the time.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421b6'>「若有比丘善知時者，謂知是時修下相、是時修高相、是時修捨相。 是謂比丘善知時也。</td>
+    <td id='p11'>11. “Suppose a monk knows the time well, which is to say that he knows the time to cultivate a humble appearance, the time to cultivate a dignified appearance, and the time to cultivate an indifferent appearance. This is called a monk who knows the time well.</td>
+  </tr>
+<tr>
+  <td title='t26.1.421b8'></td>
+  <td class='subheading'>Knowing Moderation</td>
+</tr>
+  <tr>
+    <td title='t26.1.421b8'>「云何比丘爲知節耶？ 謂比丘知節，若飮、若食、若去、若住、若坐、若臥、若語、若默、若大小便，捐除睡眠，修行正智。 是謂比丘爲知節也。</td>
+    <td id='p12'>12. “How does a monk know moderation? It means a monk knows moderation whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge.<sup id="ref4"><a href="#n4">4</a></sup> This is called a monk who knows moderation.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421b11'>「若有比丘不知節者，謂不知若飮、若食、若去、若住、若坐、若臥、若語、若默、若大小便，捐除睡眠，修行正智。 如是比丘爲不知節。</td>
+    <td id='p13'>13. “Suppose a monk doesn’t know moderation, which is to say that he doesn’t know it whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge. Such a monk doesn’t know moderation.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421b14'>「若有比丘善知節者，謂知若飮、若食、若去、若住、若坐、若臥、若語、若默、若大小便，捐除睡眠，修行正智。 是謂比丘善知節也。</td>
+    <td id='p14'>14. “Suppose a monk knows moderation well, which is to say that he knows it well whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge. This is called a monk who knows moderation well.</td>
+  </tr>
+<tr>
+  <td title='t26.1.421b17'></td>
+  <td class='subheading'>Knowing Himself</td>
+</tr>
+  <tr>
+    <td title='t26.1.421b17'>「云何比丘爲知己耶？ 謂比丘自知： 『我有爾所信、戒、聞、施、慧、辯、阿含、及所得。』 是謂比丘爲知己也。</td>
+    <td id='p15'>15. “How does a monk know himself? It means a monk knows: ‘Such are my belief, discipline, learning, generosity, wisdom, eloquence, scriptures, and attainments.’ This is called a monk who knows himself.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421b20'>「若有比丘不知己者，謂不自知： 『我有爾所信、戒、聞、施、慧、辯、阿含、及所得。』 如是比丘爲不知己。</td>
+    <td id='p16'>16. “Suppose a monk doesn’t know himself, which is to say that he doesn’t know: ‘Such are my belief, discipline, learning, generosity, wisdom, eloquence, scriptures, and attainments.’ Such a monk doesn’t know himself.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421b22'>「若有比丘善知己者，謂自知： 『我有爾所信、戒、聞、施、慧、辯、阿含、及所得。』 是謂比丘善知己也。</td>
+    <td id='p17'>17. “Suppose a monk knows himself well, which is to say that he knows: ‘Such are my belief, discipline, learning, generosity, wisdom, eloquence, scriptures, and attainments.’ This is called a monk who knows himself well.</td>
+  </tr>
+<tr>
+  <td title='t26.1.421b24'></td>
+  <td class='subheading'>Knowing the Community</td>
+</tr>
+  <tr>
+    <td title='t26.1.421b24'>「云何比丘爲知衆耶？ 謂比丘知： 『此刹利衆、此梵志衆、此居士衆、此沙門衆。 我於彼衆應如是去、如是住、如是坐、如是語、如是默。』 是謂比丘爲知衆也。</td>
+    <td id='p18'>18. “How does a monk know the community? A monk knows: ‘This is a community of warriors … this is a community of priests … this is a community of householders … this is a community of ascetics.<sup id="ref5"><a href="#n5">5</a></sup> In that community, I should depart in this way, stand in this way, sit in this way, speak in this way, and be silent in this way.’ This is called a monk who knows the community.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421b27'>「若有比丘不知衆者，謂不知： 『此刹利衆、此梵志衆、此居士衆、此沙門衆。 我於彼衆應如是去、如是住、如是坐、如是語、如是默。』 如是比丘爲不知衆。</td>
+    <td id='p19'>19. “Suppose a monk doesn’t know the community, which is to say that he doesn’t know: ‘This is a community of warriors … this is a community of priests … this is a community of householders … this is a community of ascetics. In that community, I should depart in this way, stand in this way, sit in this way, speak in this way, and be silent in this way.’ Such a monk doesn’t know the community.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421c2'>「若有比丘善知衆者，謂知： 『此刹利衆、此梵志衆、此居士衆、此沙門衆。 我於彼衆應如是去、如是住、如是坐、如是語、如是默。』 是謂比丘善知衆也。</td>
+    <td id='p20'>20. “Suppose a monk well knows the community, which is to say that he well knows: ‘This is a community of warriors … this is a community of priests … this is a community of householders … this is a community of ascetics. In that community, I should depart in this way, stand in this way, sit in this way, speak in this way, and be silent in this way.’ This is called a monk who well knows the community.</td>
+  </tr>
+<tr>
+  <td title='t26.1.421c5'></td>
+  <td class='subheading'>Knowing the Superiority of People</td>
+</tr>
+  <tr>
+    <td title='t26.1.421c5'>「云何比丘知人勝如？ 謂比丘知有二種人：有信、有不信。 若信者勝；不信者爲不如也。</td>
+    <td id='p21'>21. “How does a monk know the superiority of people? A monk knows there are two kinds of people: believers and non-believers. If someone is a believer, they’re superior; a non-believer is not.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421c7'>「謂信人復有二種：有數往見比丘、有不數往見比丘。 若數往見比丘者勝；不數往見比丘者爲不如也。</td>
+    <td id='p22'>22. “Also, there are two kinds of believers: those who frequently visit the monks and those who don’t frequently visit the monks. If someone frequently visits the monks, they’re superior; someone who doesn’t frequently visit the monks is not.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421c10'>「謂數往見比丘人復有二種：有禮敬比丘、有不禮敬比丘。 若禮敬比丘者勝；不禮敬比丘者爲不如也。</td>
+    <td id='p23'>23. “Also, there are two kinds of people who frequently visit the monks: those who revere the monks and those who don’t revere the monks. If someone reveres the monks, they’re superior; someone who doesn’t revere the monks is not.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421c12'>「謂禮敬比丘人復有二種：有問經、有不問經。 若問經者勝；不問經者爲不如也。</td>
+    <td id='p24'>24. “Also, there are two kinds of people who revere the monks: those who have questions about the <em>sūtra</em>s and those who don’t have questions about the <em>sūtra</em>s. If someone asks about the <em>sūtra</em>s, they’re superior; someone who doesn’t ask about the <em>sūtra</em>s is not.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421c14'>「謂問經人復有二種：有一心聽經、有不一心聽經。 若一心聽經者勝；不一心聽經者爲不如也。</td>
+    <td id='p25'>25. “Also, there are two kinds of people who ask about the <em>sūtra</em>s: those who whole-heartedly listen to the <em>sūtra</em>s and those who don’t whole-heartedly listen to the <em>sūtra</em>s. If someone whole-heartedly listens to the <em>sūtra</em>s, they’re superior; someone who doesn’t whole-heartedly listen to the <em>sūtra</em>s is not.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421c16'>「謂一心聽經人復有二種：有聞持法、有聞不持法。 若聞持法者勝；聞不持法者爲不如也。</td>
+    <td id='p26'>26. “Also, there are two kinds of people who whole-heartedly listen to the <em>sūtra</em>s: those who hear and retain the teaching and those who hear but don’t retain the teaching. If someone hears and retains the teaching, they’re superior; someone who hears but doesn’t retain the teaching is not.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421c19'>「謂聞持法人復有二種：有聞法觀義、有聞法不觀義。 若聞法觀義者勝；聞法不觀義者爲不如也。</td>
+    <td id='p27'>27. “Also, there are two kinds of people who hear and retain the teaching: those who hear the teaching and contemplate its meaning and those who hear the teaching but don’t contemplate its meaning. If someone hears the teaching and contemplates its meaning, they’re superior; someone who hears the teaching but doesn’t contemplate its meaning is not.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421c21'>「謂聞法觀義人復有二種： 有知法、知義、向法次法、隨順於法、如法行之。 有不知法、不知義、不向法次法、不隨順法、不如法行。 若知法、知義、向法次法、隨順於法、如法行者勝。 不知法、不知義、不向法次法、不隨順法、不如法行者爲不如也。</td>
+    <td id='p28'>28. “Also, there are two kinds of people who hear the teaching and contemplate its meaning: There are those who know the teaching, know its meaning, go from one principle to the next, conform to the teaching, and conduct themselves according to the teaching. Then, there are those who don’t know the teaching, don’t know its meaning, don’t go from one principle to the next, don’t conform to the teaching, and don’t conduct themselves according to the teaching. If someone knows the teaching, knows its meaning, goes from one principle to the next, conforms to the teaching, and conducts themselves according to the teaching, they’re superior. Someone who doesn’t know the teaching, doesn’t know its meaning, doesn’t go from one principle to the next, doesn’t conform to the teaching, and doesn’t conduct themselves according to the teaching is not.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.421c27'>「謂知法、知義、向法次法、隨順於法、如法行人復有二種： 有自饒益亦饒益他、饒益多人、愍傷世間、爲天爲人求義及饒益、求安隱快樂。 有不自饒益亦不饒益他、不饒益多人、不愍傷世間、不爲天不爲人求義及饒益、求安隱快樂。 若自饒益亦饒益他、饒益多人、愍傷世間、爲天爲人求義及饒益、求安隱快樂者，此人於彼人中爲極第一。 爲大、爲上、爲最、爲勝、爲尊、爲妙。</td>
+    <td id='p29'>29. “It also means that there are two kinds of people who know the teaching, know its meaning, go from one principle to the next, conform to the teaching, and conduct themselves according to the teaching: There are those who benefit themselves, benefit others, benefit many people, pity the world, seek both meaning and benefit for gods and humans, and seek their peace and happiness. Then, there are those who don’t benefit themselves, don’t benefit others, don’t benefit many people, don’t pity the world, don’t seek both meaning and benefit for gods and humans, and don’t seek their peace and happiness. If someone benefits themselves, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks their peace and happiness, this person is the very best among people. They’re great, superior, exceptional, excellent, honored, and marvelous.</td>
+  </tr>
+  <tr>
+    <td title='t26.1.422a7'>「譬如因牛有乳，因乳有酪，因酪有生酥，因生酥有熟酥，因熟酥有酥精。 酥精者於彼中爲極第一。 爲大、爲上、爲最、爲勝、爲尊、爲妙。 如是，若人自饒益亦饒益他、饒益多人、愍傷世間、爲天爲人求義及饒益、求安隱快樂。 此二人如上所説、如上分別、如上施設，此爲第一、爲大、爲上、爲最、爲勝、爲尊、爲妙。 是謂比丘知人勝如。」</td>
+    <td id='p30'>30. “It’s just as there’s milk because of a cow, there’s cream because of milk, butter because of cream, refined butter because of butter, and ghee because of refined butter. Ghee is the very best of those things. It’s great, superior, exceptional, excellent, honored, and marvelous. Such is the person who benefits himself, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks their peace and happiness. Of these pairs of people as they’ve been described, as they’ve been discerned, and as they’ve been defined, they’re the best, great, superior, exceptional, excellent, honored, and marvelous. This is called a monk who knows the superiority of people.”</td>
+  </tr>
+  <tr>
+    <td title='t26.1.422a15'>佛説如是。 彼諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p31'>31. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “If a monk accomplishes seven qualities, then he’ll attain the happiness of the noble ones, and he’ll be rightly headed for the end of the contaminants. What are the seven? A monk knows the teaching, knows the meaning, knows the time, knows moderation, knows himself, knows the community, and knows the superiority of people.
-{:#p2}
+<hr/>
 
-#### Knowing the Teaching
+<h3 id="notes">Notes</h3>
 
-3\. “How does a monk know the teaching? A monk knows the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning.[\[2\]](#n2){:#ref2} This is called a monk who knows the teaching.
-{:#p3}
+<ol>
+<li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0421a12" target="_blank">T26.1.421a12-2a17</a>. The correct reading of this <em>sūtra</em>’s title would appear to be “Skillful Qualities” given the occurrence of 善法 in <a href="MA_095.html" target="_blank">MĀ 95</a>, which has a list of skillful qualities as its subject. Here, we have another such list of skillful qualities that make one a competent renunciate.<br/>
+Direct parallels to this <em>sūtra</em> include <a href="https://suttacentral.net/an7.68" target="_blank">AN 7.68</a>, EĀ 39.1, T27, and a quotation in the <em>Abhidharma Saṃgītiparyāya</em> (<a href="https://cbetaonline.dila.edu.tw/zh/T26n1536_p0437b18" target="_blank">T1536.26.437b18-c10</a>). [<a href="#ref1">back</a>]</li>
+<li id="n2">This is the traditional list of twelve (sometimes nine) types of <em>sūtra</em>s found in Indian Buddhist sources. Deciphering the precise order of this list is a challenge because Saṃghadeva translates all but one item (<em>gāthā</em>), and the order of these lists varied from source to source. Using the traditional S. interpretations of <em>itivṛttaka</em>, <em>vyākaraṇa</em>, and <em>udāna</em> as clues, I arrive at this list: S. <em>sūtra</em>, <em>geya</em>, <em>vyākaraṇa</em>, <em>gāthā</em>, <em>nidāna</em>, <em>itivṛttaka</em>, <em>avadāna</em>, <em>udāna</em>, <em>jātaka</em>, <em>vaipulya</em>, <em>adbhuta-dharma</em>, and <em>upadeśa</em>. [<a href="#ref2">back</a>]</li>
+<li id="n3">This passage is cryptic. A parallel passage in Xuanzang’s translation of the <em>Abhidharma Saṃgītiparyāya</em> (T1536.437b24-26) reads: “This is a time he should cultivate calm appearances … active appearances … indifferent appearances” (謂此時應修止相⋯舉相⋯捨相等). This seems to refer to a monk’s disposition or daily activities. I’ve translated the passage here in terms of social position. [<a href="#ref3">back</a>]</li>
+<li id="n4"><em>relieving himself</em>. C. 大小便. The Chinese expression is a euphemism for defecating and urinating. [<a href="#ref4">back</a>]</li>
+<li id="n5"><em>warriors … priests … householders … ascetics</em>. S. <em>kṣatriya</em>, <em>brāhmaṇa</em>, <em>gṛhapati</em>, and <em>śramaṇa</em>. The warriors were in later eras the nobility of India, being the heads of government and the military. Householders were well-to-do and influential people due to wealth like today’s urban middle class, but they weren’t part of the nobility or priesthood. Ascetics were spiritual practitioners and leaders who had left secular life, taken vows of poverty, and adopted a nomadic life. [<a href="#ref5">back</a>]</li>
+</ol>
+<hr/>
 
-4\. “Suppose a monk doesn’t know the teaching, which is to say that he doesn’t know the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning. Such a monk doesn’t know the teaching.
-{:#p4}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 1 August 2024</p>
 
-5\. “Suppose a monk knows the teaching well, which is to say that he knows the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning. This is called a monk who knows the teaching well.
-{:#p5}
-
-#### Knowing the Meaning
-
-6\. “How does a monk know the meaning? A monk knows that this or that expression has this or that meaning. This is called a monk who knows the meaning.
-{:#p6}
-
-7\. “Suppose a monk doesn’t know the meaning, which is to say that he doesn’t know that this or that expression has this or that meaning. Such a monk doesn’t know the meaning.
-{:#p7}
-
-8\. “Suppose a monk knows the meaning well, which is to say that he knows that this or that expression has this or that meaning. This is called a monk who knows the meaning well.
-{:#p8}
-
-#### Knowing the Time
-
-9\. “How does a monk know the time? A monk knows the time to cultivate a humble appearance, the time to cultivate a dignified appearance, and the time to cultivate an indifferent appearance.[\[3\]](#n3){:#ref3} This is called a monk who knows the time.
-{:#p9}
-
-10\. “Suppose a monk doesn’t know the time, which is to say that he doesn’t know the time to cultivate a humble appearance, the time to cultivate a dignified appearance, and the time to cultivate an indifferent appearance. Such a monk doesn’t know the time.
-{:#p10}
-
-11\. “Suppose a monk knows the time well, which is to say that he knows the time to cultivate a humble appearance, the time to cultivate a dignified appearance, and the time to cultivate an indifferent appearance. This is called a monk who knows the time well.
-{:#p11}
-
-#### Knowing Moderation
-
-12\. “How does a monk know moderation? It means a monk knows moderation whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge.[\[4\]](#n4){:#ref4} This is called a monk who knows moderation.
-{:#p12}
-
-13\. “Suppose a monk doesn’t know moderation, which is to say that he doesn’t know it whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge. Such a monk doesn’t know moderation.
-{:#p13}
-
-14\. “Suppose a monk knows moderation well, which is to say that he knows it well whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge. This is called a monk who knows moderation well.
-{:#p14}
-
-#### Knowing Himself
-
-15\. “How does a monk know himself? It means a monk knows, ‘Such are my belief, discipline, learning, generosity, wisdom, eloquence, scriptures, and attainments.’ This is called a monk who knows himself.
-{:#p15}
-
-16\. “Suppose a monk doesn’t know himself, which is to say that he doesn’t know, ‘Such are my belief, discipline, learning, generosity, wisdom, eloquence, scriptures, and attainments.’ Such a monk doesn’t know himself.
-{:#p16}
-
-17\. “Suppose a monk knows himself well, which is to say that he knows, ‘Such are my belief, discipline, learning, generosity, wisdom, eloquence, scriptures, and attainments.’ This is called a monk who knows himself well.
-{:#p17}
-
-#### Knowing the Community
-
-18\. “How does a monk know the community? A monk knows: ‘This is an community of warriors … this is an community of priests … this is an community of householders … this is an community of ascetics.[\[5\]](#n5){:#ref5} In that community, I should depart in this way, stand in this way, sit in this way, speak in this way, and be silent in this way.’ This is called a monk who knows the community.
-{:#p18}
-
-19\. “Suppose a monk doesn’t know the community, which is to say that he doesn’t know: ‘This is an community of warriors … this is an community of priests … this is an community of householders … this is an community of ascetics. In that community, I should depart in this way, stand in this way, sit in this way, speak in this way, and be silent in this way.’ Such a monk doesn’t know the community.
-{:#p19}
-
-20\. “Suppose a monk well knows the community, which is to say that he well knows: ‘This is an community of warriors … this is an community of priests … this is an community of householders … this is an community of ascetics. In that community, I should depart in this way, stand in this way, sit in this way, speak in this way, and be silent in this way.’ This is called a monk who well knows the community.
-{:#p20}
-
-#### Knowing the Superiority of People
-
-21\. “How does a monk know the superiority of people? A monk knows there are two kinds of people: believers and non-believers. If someone is a believer, they’re superior; a non-believer is not.
-{:#p21}
-
-22\. “Also, there are two kinds of believers: those who frequently visit the monks and those who don’t frequently visit the monks. If someone frequently visits the monks, they’re superior; someone who doesn’t frequently visit the monks is not.
-{:#p22}
-
-23\. “Also, there are two kinds of people who frequently visit the monks: those who revere the monks and those who don’t revere the monks. If someone reveres the monks, they’re superior; someone who doesn’t revere the monks is not.
-{:#p23}
-
-24\. “Also, there are two kinds of people who revere the monks: those who have questions about the sūtras and those who don’t have questions about the sūtras. If someone asks about the sūtras, they’re superior; someone who doesn’t ask about the sūtras is not.
-{:#p24}
-
-25\. “Also, there are two kinds of people who ask about the sūtras: those who whole-heartedly listen to the sūtras and those who don’t whole-heartedly listen to the sūtras. If someone whole-heartedly listens to the sūtras, they’re superior; someone who doesn’t whole-heartedly listen to the sūtras is not.
-{:#p25}
-
-26\. “Also, there are two kinds of people who whole-heartedly listen to the sūtras: those who hear and retain the teaching and those who hear but don’t retain the teaching. If someone hears and retains the teaching, they’re superior; someone who hears but doesn’t retain the teaching is not.
-{:#p26}
-
-27\. “Also, there are two kinds of people who hear and retain the teaching: those who hear the teaching and contemplate its meaning and those who hear the teaching but don’t contemplate its meaning. If someone hears the teaching and contemplates its meaning, they’re superior; someone who hears the teaching but doesn’t contemplate its meaning is not.
-{:#p27}
-
-28\. “Also, there are two kinds of people who hear the teaching and contemplate its meaning: There are those who know the teaching, know its meaning, go from one principle to the next, conform to the teaching, and conduct themselves according to the teaching. Then, there are those who don’t know the teaching, don’t know its meaning, don’t go from one principle to the next, don’t conform to the teaching, and don’t conduct themselves according to the teaching. If someone knows the teaching, knows its meaning, goes from one principle to the next, conforms to the teaching, and conducts themselves according to the teaching, they’re superior. Someone who doesn’t know the teaching, doesn’t know its meaning, doesn’t go from one principle to the next, doesn’t conform to the teaching, and doesn’t conduct themselves according to the teaching is not.
-{:#p28}
-
-29\. “It also means that there are two kinds of people who know the teaching, know its meaning, go from one principle to the next, conform to the teaching, and conduct themselves according to the teaching: There are those who benefit themselves, benefit others, benefit many people, pity the world, seek both meaning and benefit for gods and humans, and seek peace and happiness. Then, there are those who don’t benefit themselves, don’t benefit others, don’t benefit many people, don’t pity the world, don’t seek both meaning and benefit for gods and humans, and don’t seek peace and happiness. If someone benefits themselves, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks peace and happiness, this person is the very best among people. They’re great, higher, exceptional, superior, honored, and marvelous.
-{:#p29}
-
-30\. “Just as there’s milk because of a cow, there’s cream because of milk, butter because of cream, refined butter because of butter, and ghee because of refined butter. Ghee is the very best of those things. It’s great, higher, exceptional, superior, honored, and marvelous. Such is the person who benefits himself, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks peace and happiness. Of these pairs of people as they’ve been described, as they’ve been discerned, and as they’ve been defined, they’re the best, great, higher, exceptional, superior, honored, and marvelous. This is called a monk who knows the superiority of people.”
-{:#p30}
-
-31\. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.
-{:#p31}
-
----
-
-### Notes
-
-1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0421a12" target="_blank">T26.1.421a12-2a17</a>. The correct reading of this <em>sūtra</em>’s title would appear to be “Skillful Qualities” given the occurrence of 善法 in <a href="MA_095.html" target="_blank">MĀ 95</a>, which has a list of skillful qualities as its subject. Here, we have another such list of skillful qualities that make one a competent renunciate.<br/>
-Direct parallels include <a href="https://suttacentral.net/an7.68" target="_blank">AN 7.68</a>, EĀ 39.1, T27, and a quotation in the <em>Abhidharma Saṃgītiparyāya</em> (<a href="https://cbetaonline.dila.edu.tw/zh/T26n1536_p0437b18" target="_blank">T1536.26.437b18-c10</a>). [\[back\]](#ref1)
-2. {:#n2} This is the traditional list of twelve (sometimes nine) types of <em>sūtra</em>s found in Indian Buddhist sources. Deciphering the precise order of this list is a challenge because Saṃghadeva translates all but one item (<em>gāthā</em>), and the order varies from source to source. Using the traditional S. interpretations of <em>itivṛttaka</em>, <em>vyākaraṇa</em>, and <em>udāna</em> as clues, I arrive at this list: S. <em>sūtra</em>, <em>geya</em>, <em>vyākaraṇa</em>, <em>gāthā</em>, <em>nidāna</em>, <em>itivṛttaka</em>, <em>avadāna</em>, <em>udāna</em>, <em>jātaka</em>, <em>vaipulya</em>, <em>adbhuta-dharma</em>, and <em>upadeśa</em>. [\[back\]](#ref2)
-3. {:#n3} This passage is cryptic. A parallel passage in Xuanzang’s translation of the <em>Abhidharma Saṃgītiparyāya</em> (T1536.437b24-26) reads: “This is a time he should cultivate calm appearances … active appearances … indifferent appearances” (謂此時應修止相⋯舉相⋯捨相等). This seems to refer to a monk’s disposition or daily activities. I’ve translated the passage here in terms of social position. [\[back\]](#ref3)
-4. {:#n4} <em>relieving himself</em>. C. 大小便. The Chinese expression is a euphemism for defecating and urinating. [\[back\]](#ref4)
-5. {:#n5} <em>warriors … priests … householders … ascetics</em>. S. <em>kṣatriya</em>, <em>brāhmaṇa</em>, <em>gṛhapati</em>, and <em>śramaṇa</em>. The warriors were in later eras the nobility of India, being the heads of government and the military. Householders were well-to-do and influential people due to wealth like today’s urban middle class, but they weren’t part of the nobility or priesthood. Ascetics were spiritual practitioners and leaders who had left secular life, taken vows of poverty, and adopted a nomadic life. [\[back\]](#ref5)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 30 June 2023
-{: .revised}
-
----
+<hr/>
